<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.TireApp"
    tools:context="io.anyline.tiretread.demo.activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/stone_grey"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@color/stone_grey"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:background="@color/stone_grey"
                android:contentDescription="@string/iv_header_logo"
                android:paddingStart="0dp"
                android:paddingEnd="100dp"
                android:src="@drawable/logo_anyline" />
        </LinearLayout>

        <Space
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:background="@color/stone_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/stone_grey"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textHeader"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@color/stone_grey"
                android:gravity="end"
                android:text="@string/txt_header_tire_tread"
                android:textColor="@color/white"
                android:textSize="36dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="fill_parent"
                android:background="@color/stone_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@color/stone_grey"
                android:fontFamily="@font/proxima_nova_light"
                android:gravity="end"
                android:text="@string/txt_header_showcase"
                android:textColor="@color/white"
                android:textSize="36dp" />

            <Space
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:background="@color/stone_grey" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSettingsOk"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary_anyline"
        android:textColor="@color/textColorOnPrimary_anyline"
        android:onClick="onClickedBtnOk"
        android:text="@string/btn_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInitializeSDK"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary_anyline"
        android:textColor="@color/textColorOnPrimary_anyline"
        android:onClick="onClickedBtnInitializeSDK"
        android:text="@string/btn_initialize_sdk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSettingsFeedback"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary_anyline"
        android:textColor="@color/textColorOnPrimary_anyline"
        android:onClick="onClickedBtnFeedback"
        android:text="@string/btn_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txt_settings"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnSettingsOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSettingsOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSettingsOk">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/llSettingsSaveMeasurementData"
                android:visibility="invisible"
                >
                <!-- save measurement data -->
                <TextView
                    android:id="@+id/textViewSaveMeasurement"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="10dp"
                    android:text="@string/txt_settings_save_data"
                    android:textSize="16dp" />

                <CheckBox
                    android:id="@+id/cbSettingsSaveMeasurementData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/stone_grey"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="10dp"
                    android:text="@string/txt_settings_measurement_system"
                    android:textSize="16dp" />

                <CheckBox
                    android:id="@+id/cbSettingsImperialSystem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/stone_grey"
                    android:layout_marginStart="-10dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- license key -->
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="10dp"
                    android:text="@string/txt_license_key"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/etSettingsLicenseKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:autofillHints="text"
                    android:background="@drawable/shape_border_edit_text"
                    android:hint="@string/et_settings_license_key_hint"
                    android:inputType="text"
                    android:textColor="@color/textColor"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tvHowToLicenseKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="10dp"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textViewAccuracySpeed"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="10dp"
                    android:text="@string/txt_settings_measurement_mode"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textViewHighSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:text="@string/txt_settings_mode_speed"
                    android:textSize="16dp" />

                <Switch
                    android:id="@+id/swSettingsMeasurementQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:switchMinWidth="70dp"
                    android:thumbTint="@color/primary_anyline" />

                <TextView
                    android:id="@+id/textViewHighAccuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:text="@string/txt_settings_mode_accuracy"
                    android:textSize="16dp" />
            </LinearLayout>

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- save measurement data -->
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="10dp"
                    android:text="@string/txt_settings_version"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvSettingsVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- license id -->

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/txt_settings_device_name"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvSettingsDeviceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <!-- license id -->
                <TextView
                    android:id="@+id/tvUploadKbps"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/txt_upload_kbit_s"
                    android:textSize="16dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tvSettingsUpload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:gravity="start"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSettingsCancel"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary_anyline"
        android:textColor="@color/textColorOnPrimary_anyline"
        android:onClick="onClickedBtnCancel"
        android:scaleType="center"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSettingsErrorView"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnInitializeSDK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearHeader" />


</androidx.constraintlayout.widget.ConstraintLayout>