<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.anyline.tiretread.demo.activities.ResultFeedbackActivity">

    <Button
        android:id="@+id/btnResultFeedback_cancel"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary_anyline"
        android:onClick="onClickedBtnCancel"
        android:text="@string/btn_cancel"
        android:textColor="@color/textColorOnPrimary_anyline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnResultFeedback_submit"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary_anyline"
        android:onClick="onClickedBtnSubmit"
        android:text="@string/btn_save"
        android:textColor="@color/textColorOnPrimary_anyline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearHeader"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/stone_grey">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:background="@color/stone_grey">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:paddingEnd="100dp"
                android:paddingStart="0dp"
                android:background="@color/stone_grey"
                android:src="@drawable/logo_anyline"
                android:contentDescription="@string/iv_header_logo"/>
        </LinearLayout>
        <Space
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:background="@color/stone_grey"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="end"
            android:background="@color/stone_grey">

            <TextView
                android:id="@+id/textHeader"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:background="@color/stone_grey"
                android:text="@string/txt_header_tire_tread"
                android:textColor="@color/white"
                android:textSize="36dp" />
            <Space
                android:layout_width="5dp"
                android:layout_height="fill_parent"
                android:background="@color/stone_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:background="@color/stone_grey"
                android:text="@string/txt_header_showcase"
                android:fontFamily="@font/proxima_nova_light"
                android:textColor="@color/white"
                android:textSize="36dp"
                />
            <Space
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:background="@color/stone_grey"/>
        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginEnd="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnResultFeedback_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="400dp"
                android:layout_height="10dp"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="400dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/tread_result"
                android:contentDescription="@string/txt_tire" />

            <LinearLayout
                android:id="@+id/llMeasurementResultFeedbackRegions"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <!-- The fragment_region_result_feedback are dynamically added here -->

            </LinearLayout>

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/txt_feedback_title" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etResultFeedback_userInput"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="fill_vertical"
                    android:autofillHints="@string/txt_feedback"
                    android:background="@drawable/shape_border_feedback_edit_text"
                    android:gravity="top|start"
                    android:hint="@string/txt_feedback_hint"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvResultFeedback_inputCounter"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="end|top"
                    android:text="500/500" />

                <TextView
                    android:id="@+id/txtResultFeedback_token"
                    android:layout_width="400dp"
                    android:layout_height="20dp"
                    android:gravity="start"
                    android:text="@string/txt_token"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txtResultFeedback_error"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:gravity="center"
        android:textSize="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>