<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.TireApp"
    tools:context="io.anyline.tiretread.demo.activities.TutorialActivity">

    <LinearLayout
        android:id="@+id/linearHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/stone_grey"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@color/stone_grey"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:background="@color/stone_grey"
                android:paddingStart="0dp"
                android:paddingEnd="100dp"
                android:src="@drawable/logo_anyline" />
        </LinearLayout>

        <Space
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:background="@color/stone_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/stone_grey"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/stone_grey"
                android:gravity="end"
                android:text="@string/txt_header_tire_tread"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="fill_parent"
                android:background="@color/stone_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/stone_grey"
                android:fontFamily="@font/proxima_nova_light"
                android:gravity="end"
                android:minHeight="36dp"
                android:text="@string/txt_header_showcase"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <Space
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:background="@color/stone_grey" />
        </LinearLayout>
    </LinearLayout>

    <WebView
        android:id="@+id/web_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnMain_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearHeader" />

    <Button
        android:id="@+id/btnMain_cancel"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary_anyline"
        android:onClick="onClickedButtonCancel"
        android:scaleType="center"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>

